Final changes to report

--- a/docs/object creator intermediate report/Intermediate_Report_Object_Creator.tex
+++ b/docs/object creator intermediate report/Intermediate_Report_Object_Creator.tex
@@ -74,19 +74,21 @@
 
 Our module will have four major components including a way to create an image, edit an image, save image, and a way to export the object as a JSON object. The Image Creation class will include functions to draw on a canvas, import an image, or use primitive shapes to construct each individual object. Image Creation will require a canvas, which will be provided by the Javascript Library. The canvas will report the coordinates of the object features, as to facilitate conversion into a .png format. Next, the Image Editing class will allow the user to manipulate the size and color of the object, while also providing access to an undo button. The functions of the Image Editing class will be accessible to the user through a toolbar type user interface. Thirdly, there will be a Save Image class which allows users to save pieces of their full object as as .png files. And finally, Export Object will be a class which is called upon exiting the canvas and will send the group of saved pieces to the Sharing Framework as a JSON object.
 
-This Image Creation window, along side our canvas window, will prompt begin drawing part.” This prompt will acknowledge that the user is drawing a part of the character, which will be saved as a unique object. The user will be responsible for designating a name for the object, such as head.png, in order to be uniquely recognized for use in other modules. If the user chooses to draw their object, they will do so by drawing, naming, and saving each part individually. The Save Image class will save each piece as a .png file in a position in an array. When the user is finished saving each piece of their object, they will exit out of the Object creation window. This act of exiting will also call our Export Object class which will export the array of saved.png images to the Sharing Framework as a JSON object. Once on the sharing framework, the object and its pieces can be accessed and manipulated by other modules. Below, a full UML class diagram of these three major components and their functions are shown.
+This Image Creation window, along side our canvas window, will prompt begin drawing part. This prompt will acknowledge that the user is drawing a part of the character, which will be saved as a unique object. The user will be responsible for designating a name for the object, such as head.png, in order to be uniquely recognized for use in other modules. If the user chooses to draw their object, they will do so by drawing, naming, and saving each part individually. The Save Image class will save each piece as a .png file in a position in an array. When the user is finished saving each piece of their object, they will exit out of the Object creation window. This act of exiting will also call our Export Object class which will export the array of saved.png images to the Sharing Framework as a JSON object. Once on the sharing framework, the object and its pieces can be accessed and manipulated by other modules. Below, a full UML class diagram of these three major components and their functions are shown.
 
 %------------------------------------------------
 
 \section*{Design Rationale}
 
-To create our model, we will be implementing an Abstract Factory software design pattern. Since an abstract factory is a group of factories that have a common theme this seems to fit the best. We have different classes that create objects and shapes in different ways (i.e. drawing, importing, geometric shapes) but all share the common theme of creating an image and eventually forming the object. These different forms of creation make up our different factories for image creation. All classes such as image creation, object creation, and editing have to do with images and JSON objects but handle them differently falling under our abstract factory model.
+To create our model, we will be implementing an Abstract Factory software design pattern. We have chosen this design pattern because our module is based on creating objects but will create those objects in different fashions. The user can either import an image, draw, or build a character out of primitive geometric shapes. All three of these classes will accomplish the same goal of creating an image that will later be used as an object throughout the application. Our other classes will provide the functions of editing and saving this object. An Abstract Factory design pattern is defined as one which groups individual factories that have a common theme. And so, because all of our classes deal with the larger picture of creating an image and forming an object but do it in different forms, we believe that an Abstract Factory design pattern best fulfills the architecture we have laid out.
 
 %------------------------------------------------
 
 \section*{Design Architecture UML Diagram}
-\includepdf[pages={1}]{ClassDiagramObjectModule1.pdf}
-\includepdf[pages={1}]{ExternalFlowChart1.pdf}
+\includegraphics[scale=0.52]{ClassDiagramObjectModule}\\
+Internal Diagram: The internal UML diagram shows the basic layout of our module. Most of the module is dedicated to object creation, which will be handled differently depending on the source of the image. The module should take mouse and text commands to arrange various shapes.  Images will be composed of various shapes, which will be packed into objects that can be saved and transported. These objects will also be accessible to the object manipulator, which will handle changes to existing objects.\\
+\includegraphics[scale=0.52]{ExternalFlowChart}\\
+External Diagram: The external UML diagram lays out our module's interaction with other systems and modules. The objects the module creates will be passed to and from the sharing module whenever an object is created or altered. The module itself will create its own instance of an HTML canvas which we will manipulate using Javascript and JQuery methods.
 
 %------------------------------------------------
 
@@ -98,9 +100,9 @@ The current state of our module is at the end of the design and planning phase. 
 
 \section*{Project Timeline}
 
-\includegraphics[scale=0.33]{Timeline}\\
+\includegraphics[scale=0.35]{Timeline}\\
 
-First of all, Todd will implement the canvas where all the drawing is taking place. Once we have the canvas working, we will work on implementing the basic drawing functions and saving function. The basic drawing functions are free-drawing function (Users will be able to draw dots/free-lines using mouse --Cody) and geometric-drawing function (Users will be able to draw basic geometric shapes like triangles/rectangles/circles, etc --Dongni & Darren). At the same time, saving function (save the canvas as JSON object-- .png and pass it to sharing framework) will be implemented by Lauren. Each function will be tested separately and ready for the first integration.
+First of all, Todd will implement the canvas where all the drawing is taking place. Once we have the canvas working, we will work on implementing the basic drawing functions and saving function. The basic drawing functions are free-drawing function (Users will be able to draw dots/free-lines using mouse --Cody) and geometric-drawing function (Users will be able to draw basic geometric shapes like triangles/rectangles/circles, etc --Dongni \& Darren). At the same time, saving function (save the canvas as JSON object-- .png and pass it to sharing framework) will be implemented by Lauren. Each function will be tested separately and ready for the first integration.
 
 Integration 1 work:
 During this time,  we will put  the basic drawing function and saving functions together, test and adjust each function to make sure they will still be functional together. Also we will communicate with other teams to ensure that each module runs within the same system as the others.
@@ -113,7 +115,15 @@ Integration 3 work: the entire system should be integrated to work smoothly toge
 
 \section*{Insight on Development Process}
 
-Our process so far has been meeting together to discuss our roles, clear up confusion, and come to concise ideas. Overall our method of compiling work on Google Drive, meeting together, and piecing the final product in github has been working. Some challenges we have faced along the way are problems with github overwriting our work, proofreading, and general communication. We have learned from these previous mistakes to proofread better in the future, communicate more directly, and check for mistakes we may make when pulling parts together. Our plan for the future is to continue doing our best to meet together in person (even if we can not meet as a full group) so we can avoid confusion when communicating and again stay more concise in our implementation. This meeting in person has worked well for us so far and hopefully will work in the future as we will be able to help each other out better and stay knowledgeable with what each person is currently doing. When we can not meet together things like Google Chat on our Drive allow us to contact each other and working in our drive allow us to connect ideas. Since we have been working well as a team so far, our plan for the future is to continue our current strategy and only implement a few changes such as better proofreading and communication on each others roles.
+Our process thus far has involved assembling ideas and information on Google Drive, then meeting in person to discuss. There have been some problems with Github and Latex as a result but it has improved our decision-making process as well as our collective understanding of our goals and responsibilities. We experienced some issues in particular with overwriting work on Github and as a result have become more aware of the need to thoroughly proofread our work. Moving forward, we are looking to work out more time to meet and discuss the code as a group. We have also realized how important our module is to a number of other groups and are planning to maintain communication with other groups.We have formed solid plans for the future and have laid out the groundwork for the future implementation of our module. 
+
+%------------------------------------------------
+
+\section*{User Interface Interaction and Mockup}
+
+\includegraphics[scale=0.58]{Mockup}\\
+
+The Object Creator should generate its own window as part of the interface and should invalidate any commands to the canvas until the object creator is closed. The interface will allow for interaction primarily through use of assigned buttons and reading mouse commands within the canvas bounds, with a few drag and drop methods. Drawing functions will be separated from geometry tools and closing the window should send any saved objects to permanent storage. Geometric tools will require that the user specify an action prior to each command, whereas drawing tools will allow for sequences of commands, or continuous inputs depending on the tool selected. Certain geometric tools will utilize text boxes to designate height and width, as well as initial saves to specify object names.
 
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
