Fixing Dongni's name... again

--- a/docs/object creator intermediate report/Intermediate_Report_Object_Creator.tex
+++ b/docs/object creator intermediate report/Intermediate_Report_Object_Creator.tex
@@ -55,7 +55,7 @@
 
 \title{\textbf{Intermediate Report for Object Creator Team}} 
 
-\author{\textsc{Darren Chu\\Todd Detweiler\\Cody Kagawa\\Lauren Swanson\\Dogni Wang} % Author
+\author{\textsc{Darren Chu\\Todd Detweiler\\Cody Kagawa\\Lauren Swanson\\Dongni Wang} % Author
 \\{\textit{University of Puget Sound}}} % Institution
 
 \date{\today} % Date
